[package]
name = "turbojpeg"
version = "0.2.0"
edition = "2018"
authors = ["Jan Špaček <patek.mail@gmail.com>"]
homepage = "https://github.com/honzasp/rust-turbojpeg"
repository = "https://github.com/honzasp/rust-turbojpeg"
license = "Unlicense"
keywords = ["jpeg", "image", "decoder", "encoder"]
categories = ["compression", "api-bindings", "multimedia::images"]
description = "Safe bindings for TurboJPEG"
readme = "README.md"

[dependencies]
image = {version = ">=0.23.10", optional = true}
libc = "^0.2"
thiserror = "^1.0"
turbojpeg-sys = {path = "turbojpeg-sys", version = "^0.1.0"}

[dev-dependencies]
anyhow = {version = "1.0"}
image = {version = "0.23", features = ["jpeg", "png", "bmp", "farbfeld", "pnm"]}
clap = "2.33"

[features]
bindgen = ["turbojpeg-sys/bindgen"]
pkg-config = ["turbojpeg-sys/pkg-config"]

[[example]]
name = "image"
required-features = ["image"]

[package.metadata.docs.rs]
features = ["image"]
