[package]
name = "turbojpeg"
version = "0.4.0"
edition = "2018"

authors = ["Jan Špaček <patek.mail@gmail.com>"]
homepage = "https://github.com/honzasp/rust-turbojpeg"
repository = "https://github.com/honzasp/rust-turbojpeg"
documentation = "https://docs.rs/turbojpeg"
license = "Unlicense"
readme = "README.md"

keywords = ["jpeg", "image", "decoder", "encoder", "transform"]
categories = ["compression", "api-bindings", "multimedia::images"]
description = "Fast and easy JPEG encoding, decoding and lossless transforms with TurboJPEG"

[lib]
doctest = false

[dependencies]
image = {version = ">=0.24", optional = true, default-features = false}
libc = "^0.2"
thiserror = "^1.0"
turbojpeg-sys = {path = "turbojpeg-sys", version = "^0.1.0"}

[dev-dependencies]
anyhow = {version = "1.0"}
image = {version = "^0.24", features = ["jpeg", "png", "bmp", "farbfeld", "pnm"]}
clap = "2.33"

[features]
bindgen = ["turbojpeg-sys/bindgen"]
pkg-config = ["turbojpeg-sys/pkg-config"]

[[example]]
name = "image"
required-features = ["image"]

[package.metadata.docs.rs]
features = ["image"]
rustc-args = ["--cfg", "docsrs"]
