[package]
name = "turbojpeg-sys"
version = "0.1.0"
edition = "2018"
authors = ["Jan Špaček <patek.mail@gmail.com>"]
homepage = "https://github.com/honzasp/rust-turbojpeg"
repository = "https://github.com/honzasp/rust-turbojpeg/turbojpeg-sys"
license = "Unlicense"
keywords = ["jpeg", "image", "decoder", "encoder"]
categories = ["compression", "external-ffi-bindings", "multimedia::images"]
description = "Raw bindings for TurboJPEG"

[dependencies]
libc = "^0.2"

[build-dependencies]
anyhow = {version = "^1.0"}
bindgen = {version = "^0.57", optional = true}
pkg-config = {version = "^0.3", optional = true}

[features]
default = []
