[package]
name = "turbojpeg-sys"
version = "1.0.1-pre"
edition = "2021"
resolver = "2"

authors = ["Jan Špaček <patek.mail@gmail.com>"]
homepage = "https://github.com/honzasp/rust-turbojpeg"
repository = "https://github.com/honzasp/rust-turbojpeg/turbojpeg-sys"
license = "Unlicense OR MIT"

keywords = ["jpeg", "image", "decoder", "encoder"]
categories = ["compression", "external-ffi-bindings", "multimedia::images"]
description = "Raw bindings for TurboJPEG"
links = "turbojpeg"

exclude = [
    "libjpeg-turbo/.gitattributes",
    "libjpeg-turbo/.github/",

    "libjpeg-turbo/BUILDING.md",
    "libjpeg-turbo/change.log",
    "libjpeg-turbo/ChangeLog.md",
    "libjpeg-turbo/coderules.txt",
    "libjpeg-turbo/doc/",
    "libjpeg-turbo/doxygen*",

    "libjpeg-turbo/fuzz/",
    "libjpeg-turbo/java/",
    "libjpeg-turbo/testimages/",
]

[dependencies]
libc = "^0.2"

[build-dependencies]
anyhow = {version = "^1.0"}
bindgen = {version = "^0.57", optional = true}
cmake = {version = "^0.1", optional = true}
pkg-config = {version = "^0.3", optional = true}

[features]
require-simd = []
default = ["cmake", "pkg-config", "require-simd"]
